# cmake_add_version

./: CMakeLists.txt  README.md  compile.bat  compile.sh  main.cpp
lib/: CMakeLists.txt  test.cpp  test.h  version.rc.in
